--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">MusicBuddy</string>
+
+    <string name="explanation">Enter 3 different artists/bands and I will give you cool recommendations!</string>
+    <string name="example1">e.g. Pink Floyd</string>
+    <string name="example2">e.g. Queen</string>
+    <string name="example3">e.g. Led Zeppelin</string>
+    <string name="error">Enter at least one artist to proceed</string>
+    <string name="name">Name</string>
+    <string name="description">Description</string>
 </resources>
